build/log/idf_py_stdout_output_15600
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D E:\ESP32_NEWBIE\Espressif\frameworks\esp-idf-v5.5\examples\get-started\RTOS_UART\build\bootloader\esp-idf\esptool_py && E:\ESP32_NEWBIE\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/examples/get-started/RTOS_UART/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/RTOS_UART.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/RTOS_UART.c.obj 
ccache E:\ESP32_NEWBIE\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/examples/get-started/RTOS_UART/build/config -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/newlib/platform_include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/include/freertos -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/config/xtensa/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/freertos/esp_additions/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include/soc -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/include/soc/esp32 -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/dma/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/ldo/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/debug_probe/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/power_supply/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/port/esp32/. -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_hw_support/port/esp32/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/heap/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/heap/tlsf -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/log/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/soc/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32 -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/soc/esp32/register -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/hal/platform_port/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/hal/esp32/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/hal/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32/include/esp32 -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_rom/esp32 -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_common/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_system/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/soc -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_system/port/include/private -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/xtensa/esp32/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/xtensa/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/xtensa/deprecated_include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/spi_flash/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/driver/deprecated -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/driver/i2c/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/driver/touch_sensor/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/driver/twai/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/driver/touch_sensor/esp32/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_pm/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_ringbuf/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_gpio/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_pcnt/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_gptimer/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_spi/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_mcpwm/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_ana_cmpr/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_i2s/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdmmc/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/sdmmc/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdspi/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdio/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_dac/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_rmt/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_tsens/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_sdm/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_i2c/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_uart/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_ledc/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_parlio/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_usb_serial_jtag/include -IE:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/components/esp_driver_twai/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/examples/get-started/RTOS_UART=. -fmacro-prefix-map=E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/RTOS_UART.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\RTOS_UART.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/RTOS_UART.c.obj -c E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/examples/get-started/RTOS_UART/main/RTOS_UART.c
E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/examples/get-started/RTOS_UART/main/RTOS_UART.c: In function 'uart_tx_task1':
E:/ESP32_NEWBIE/Espressif/frameworks/esp-idf-v5.5/examples/get-started/RTOS_UART/main/RTOS_UART.c:65:36: error: implicit declaration of function 'esp_random'; did you mean 'srandom'? [-Wimplicit-function-declaration]
   65 |             int rand_part = 100 + (esp_random() % 401); // 100~500 ms
      |                                    ^~~~~~~~~~
      |                                    srandom
ninja: build stopped: subcommand failed.
